static/scss/wireframe.scss
/* ... */
// CALENDAR

.table.calendar {
	thead {
		td {
			text-align: center;
			width: calc(100% / 7);
		}
	}
	tbody {
		td {
			font-size: 16px;
			padding: 25px 0;
			position: relative;
			text-align: center;
			a {
				color: #000;
				display: inline-block;
				line-height: 26px;
				width: 26px;
			}
			&.today {
				a {
					color: #d00;
					font-weight: bold;
				}
			}
			&.event {
				a {
					background-color: $accent;
					border-radius: 13px;
					color: #fff;
				}
			}
		}
	}
}

.calendar-events {
	display: table;
	width: 100%;
	.marker {
		background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAYAAAD0In+KAAAAD0lEQVQIW2N0C8zwYQACAAhlAU0RIoPTAAAAAElFTkSuQmCC) repeat-y center;
		display: table-cell;
		position: relative;
		width: 60px;
		span {
			background-color: $accent;
			border-radius: 50%;
			display: block;
			height: 12px;
			left: 50%;
			margin-left: -6px;
			margin-top: -6px;
			position: absolute;
			top: 50%;
			width: 12px;
		}
	}
	.details {
		display: table-cell;
		.block {
			display: table;
			margin: 5px 0;
			width: 100%;
			.event-time {
				display: table-cell;
				font-size: 22px;
				font-weight: bold;
				vertical-align: middle;
				width: 80px;
			}
			.event-content {
				display: table-cell;
				h3 {
					font-size: 20px;
					letter-spacing: 0.1em;
					margin-bottom: 5px;
				}
				.tiny {
					color: $default-light;
					font-size: 10px;
					margin-bottom: 10px;
					text-transform: uppercase;
				}
			}
		}
	}
	&:first-child {
		.marker {
			&:before {
				background-color: #f1f1f1;
				content: ('');
				display: block;
				height: 50%;
				position: absolute;
				top: 0;
				width: 50px;
			}
		}
	}
	&:last-child {
		margin-bottom: 20px;
		.marker {
			&:before {
				background-color: #f1f1f1;
				bottom: 0;
				content: ('');
				display: block;
				height: 50%;
				position: absolute;
				width: 50px;
			}
		}
	}
	&:only-child {
		.marker { background: transparent; }
	}
}

// ARTICLES

.articles-options {
	background-color: $accent-darker;
	margin-bottom: 20px;
	padding: 10px;
	&-title {
		color: #fff;
		font-size: 20px;
		font-weight: bold;
		line-height: 30px;
	}
}

.articles-index {
	align-items: stretch;
	display: flex;
	flex-wrap: wrap;
	.article-item {
		flex: 0 0 50%;
		margin-bottom: 20px;
		@media (max-width: $xsmall) {
			flex: 0 0 100%;
			padding: 0 !important;
		}
		&:nth-child(even) { padding-left: 10px; }
		&:nth-child(odd) { padding-right: 10px; }
		.content {
			background-color: #fff;
			height: 100%;
			.image {
				background-position: center;
				background-repeat: no-repeat;
				background-size: cover;
				height: 220px;
			}
			.details {
				padding: 15px;
				.title {
					display: inline-block;
					font-size: 20px;
					font-weight: bold;
					margin-bottom: 10px;
				}
				.author {
					color: $default-light;
					display: block;
					font-size: 10px;
					letter-spacing: 0.2em;
					margin-bottom: 15px;
					text-transform: uppercase;
					a {
						color: $default-light;
					}
				}
			}
		}
	}
}

.article {
	&-header {
		background-position: center;
		background-repeat: no-repeat;
		background-size: cover;
		height: 280px;
		margin-bottom: 15px;
		position: relative;
		&-shadow {
			background: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.3) 40%, #000 100%);
			bottom: 0;
			position: absolute;
			top: 0;
			width: 100%;
		}
		&-title {
			bottom: 20px;
			color: #fff;
			font-size: 36px;
			left: 20px;
			position: absolute;
			right: 20px;
		}
	}
	&-content {
		padding: 0;
		&-info {
			background-color: #f6f6f6;
			border-bottom: 1px solid #ddd;
			color: $default;
			font-size: 12px;
			letter-spacing: 0.1em;
			padding: 15px;
			text-transform: uppercase;
			.at {
				margin-left: 30px;
			}
			.star {
				color: #ffc400;
			}
		}
		&-container {
			margin: auto;
			padding: 30px 0;
			width: 85%;
			p {
				margin-bottom: 15px;
				&:last-child { margin: 0; }
			}
		}
	}
}

// FOOTER

footer {
	background-color: $accent-darker;
	color: #ccc;
	font-size: 11px;
	padding: 10px 0;
	a {
		color: #ccc;
		&:hover { color: #fff; }
	}
}

// RESPONSIVE LAYOUT

.content-row {
	flex-wrap: nowrap !important;
}

#sidebar {
	padding-left: 10px;
	padding-right: 10px;
	flex: 0 0 300px;
	@media (max-width: $small) {
		display: none;
	}
}
#content {
	flex: 1;
	margin-bottom: 30px;
	min-width: 0;
	padding-left: 10px;
	padding-right: 10px;
}

// PROFILE

.profile {
	&-header {
		height: 250px;
		margin-bottom: 20px;
		position: relative;
		&-background {
			background-position: center;
			background-repeat: no-repeat;;
			background-size: cover;
			bottom: 0;
			position: absolute;
			top: 0;
			width: 100%;
			z-index: -1;
			.inner-shadow {
				background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 40%, black 100%);
				height: 100%;
			}
		}
		&-info {
			bottom: 20px;
			display: flex;
			align-items: flex-end;
			left: 20px;
			position: absolute;
			right: 20px;
			.avatar {
				border: 2px solid #fff;
				flex: 0 0 150px;
			}
			.details {
				color: #fff;
				flex: 1;
				margin-left: 20px;
				.username {
					font-size: 36px;
					margin-bottom: 15px;
				}
				.item {
					float: left;
					margin-right: 30px;
					span {
						color: $default;
						display: block;
						font-size: 12px;
						margin-bottom: 5px;
						text-transform: uppercase;
					}
				}
			}
		}
	}
}

// ATTACHMENT

.attachment {
	border: 1px dotted #ddd;
	margin-right: 10px;
	overflow: auto;
	padding: 10px;
	width: 230px;
	a {
		display: block;
		&:hover { text-decoration: none; }
	}
	.file-icon {
		float: left;
		font-size: 40px;
		margin-right: 10px;
		width: 35px;
		vertical-align: middle;
	}
	.file-name {
		color: #000;
		float: left;
		font-size: 10px;
		padding: 8px 0;
		vertical-align: middle;
		span {
			display: block;
			font-size: 12px;
			font-weight: bold;
			margin-bottom: 2px;
			overflow: hidden;
			text-overflow: ellipsis;
			width: calc(230px - 70px);
		}
	}
}
/* ... */

